[Refactor]: 전체 UI 리디자인 및 API 오류 수정
- Splash 및 Home 화면 전반 디자인 개선
- 헤더 프로필 이미지 로딩/표시 방식 수정
- Heritage 인식 기능에 로딩 다이얼로그 적용
- 이미지 선택 직후 크래시 발생 원인(lateinit 미초기화) 해결
- Retrofit 호출 흐름 정리 및 비동기 처리 안정화
- API/member, API/heritage 응답 처리 로직 개선
- 불필요한 레이아웃/리소스 정리 및 코드 구조 최적화

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">HistoryApp</string>
+    <string name="app_name">역사 길잡이</string>
+    <string name="app_description">문화재 탐험 및 기록 앱</string>
 </resources>
